--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
     <head>
+        <title>Pac-Man</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>Pacman</h1>
         <h3>Score:<span id="score"></span></h3>
-        <div class="grid">
-            
-        </div>
+        <div class="grid"></div>
         <script src="index.js"></script>
     </body>
 </html>
